fix(WindowLabel): Wrong height of WindowLabel component

--- a/src/components/WindowLabel/WindowLabel.module.scss
+++ b/src/components/WindowLabel/WindowLabel.module.scss
@@ -1,6 +1,6 @@
 .window-label {
 	flex-grow: 1;
-	height: 20px;
+	height: 21px;
 	border: {
 		top: 1px solid #fefefe;
 		right: 1px solid #0f0f0f;
